<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/duvar_kagidi"
    tools:context=".takimlar">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="189dp"
        android:layout_height="174dp"
        app:layout_constraintBottom_toTopOf="@+id/TakimA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_people_24" />

    <EditText
        android:id="@+id/TakimA"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/yazi_arka_plan"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/A_Takimi"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TakimB"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/TakimB"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/yazi_arka_plan"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/B_Takimi"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/basla"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/basla"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/buton_arka_plan"
        android:text="@string/Basla"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/menu1"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/menu1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/buton_arka_plan"
        android:text="@string/Menu"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>