<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/durdur"
        android:layout_width="186dp"
        android:layout_height="75dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/sure_arka_plan"
        android:hapticFeedbackEnabled="false"
        android:text="00:00"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/skor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dogru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/beyaz"
        android:text="@string/Dogru"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/yasak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/beyaz"
        android:text="@string/Yasak"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/pas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:background="@drawable/beyaz"
        android:text="@string/Pas"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yasak"
        app:layout_constraintStart_toEndOf="@+id/dogru" />

    <TextView
        android:id="@+id/anaKelime"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/Ana_Kelime"
        android:textColor="#600908"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yasak1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skor" />

    <TextView
        android:id="@+id/yasak1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/Birinci_Yasak_Kelime"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yasak2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anaKelime" />

    <TextView
        android:id="@+id/yasak2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/Ikinci_Yasak_Kelime"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yasak3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yasak1" />

    <TextView
        android:id="@+id/yasak3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/Ucuncu_Yasak_Kelime"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yasak4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yasak2" />

    <TextView
        android:id="@+id/yasak4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:text="@string/Dortuncu_Yasak_Kelime"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/yasak5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yasak3" />

    <TextView
        android:id="@+id/yasak5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/Besinci_Yasak_Kelime"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dogru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yasak4" />

    <TextView
        android:id="@+id/skor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:text="SONUÇ: 0"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/anaKelime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durdur" />

    <TextView
        android:id="@+id/takimIsmi"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Takım İsmi"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/KALANPAS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:text="KALAN PAS: 3"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/anaKelime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durdur" />

</androidx.constraintlayout.widget.ConstraintLayout>